--- a/grid.html
+++ b/grid.html
@@ -8,10 +8,14 @@
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <title>CSS grids</title>
 </head>
-<body>
+<body class="grid-body">
     <header></header>
-    <main>
-        
+    <main class="container">
+        <div class="grid-item item-1"></div>
+        <div class="grid-item item-2"></div>
+        <div class="grid-item item-3"></div>
+        <div class="grid-item item-4"></div>
+        <div class="grid-item item-5"></div>
     </main>
     <footer></footer>
     <script src="assets/js/script.js"></script>
